--- a/Ocelot/Ocelot.csproj
+++ b/Ocelot/Ocelot.csproj
@@ -1,10 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishAot>true</PublishAot>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Ocelot</Title>
+    <Authors>Navid M</Authors>
+    <Version>1.1.0</Version>
+    <Description>A minimal MVC web framework compatible with AOT (ahead-of-time) compiled projects</Description>
+    <Copyright>Copyright Navid M (2024)</Copyright>
+    <PackageProjectUrl>https://github.com/navid-m/ocelot/</PackageProjectUrl>
   </PropertyGroup>
+
 </Project>
