--- a/Ocelot/Ocelot.csproj
+++ b/Ocelot/Ocelot.csproj
@@ -9,7 +9,7 @@
     <Title>Ocelot</Title>
     <Authors>Navid M</Authors>
     <Version>1.1.0</Version>
-    <Description>MVC web framework compatible with AOT (ahead-of-time) compiled projects</Description>
+    <Description>MVC web framework for AOT (ahead-of-time) compiled projects</Description>
     <Copyright>Copyright Navid M (2024)</Copyright>
     <PackageProjectUrl>https://github.com/navid-m/ocelot/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/navid-m/ocelot/</RepositoryUrl>
