--- a/Ocelot/Ocelot.csproj
+++ b/Ocelot/Ocelot.csproj
@@ -18,6 +18,15 @@
     <PackageTags>microframework;mvc;web;framework;webframework;aot;aheadoftime;aotcompilation;flask;fast;</PackageTags>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <IsAotCompatible>True</IsAotCompatible>
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <IsAotCompatible>True</IsAotCompatible>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Include="..\Ocelot.Test\Static\icon.png">
       <Pack>True</Pack>
